{
    "name": "PlayerControler",
    "maps": [
        {
            "name": "Gameplay",
            "id": "36930b20-5f0a-41dd-bf94-6195d665fbca",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "ecba9fd3-27d9-437a-b13f-0cab76d2be1a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Value",
                    "id": "5e2eaa88-9ed9-48c1-950f-8879f66e59df",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "FrappeFaible",
                    "type": "Value",
                    "id": "15fac36c-56fc-4053-8f4c-715131fac39a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "FrappeForte",
                    "type": "Value",
                    "id": "2f2321a6-536e-476d-b271-33bc85ac3b45",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Blocage",
                    "type": "Value",
                    "id": "8ee104bf-df97-4c51-ac90-d434a5350914",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Deblocage",
                    "type": "Value",
                    "id": "3a7b86cd-67a8-4ba5-aed8-63580e8e1104",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=1)"
                },
                {
                    "name": "ElementSuivent",
                    "type": "Value",
                    "id": "c1e8a4fe-a2df-4d2e-80bb-63a7f0320bd2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ElementPrecedent",
                    "type": "Value",
                    "id": "928a616b-0a46-4da9-a059-49475d19ff3f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "AttaqueSp",
                    "type": "Value",
                    "id": "b4d39c8d-e1a9-4a69-ab26-322b1fef36c9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Pause",
                    "type": "Value",
                    "id": "6bed80f8-cac6-4b12-ace6-fcc0ed30db1a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8c149015-b823-4933-8e76-e5f91338ac9e",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1d93969b-0773-4b89-867a-a4a444b4d97f",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5cc80a56-3d87-4de2-b9fb-e84b56d52924",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FrappeFaible",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e53a77bd-3e9f-45e0-9d48-e413030bb2ab",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FrappeForte",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0e6c027a-a143-43ac-b1c3-806e14a1eae3",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Blocage",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "80b09bc3-7046-4f63-9da2-8766e1ff504d",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ElementSuivent",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8a111c4e-15a3-4fc9-a364-c9e8fbf85893",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ElementPrecedent",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4d7f0f7e-d204-4b95-807b-0ff12fc8fe45",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AttaqueSp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "343317bb-6dbc-4db8-922d-83f4291d34e4",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Deblocage",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "22d38551-2da4-48c0-83c9-3a8565ebd591",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}